oxygen/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxygen
  namespace: oxygen
spec:
  selector:
    application: oxygen
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
